--- a/gallery.html
+++ b/gallery.html
@@ -144,6 +144,25 @@
 		  	<div class="desc">Archtitecture photo of an entrance at Parkland College. Taken with a Canon Powershot SX110IS for Digital Photography at Parkland College.</div>
 		</div>
 	</article>
+	
+	<article class="category" id="video">
+		<h1 class="subheading">Animations and Video</h1>
+		<div class="animation">
+ 			<iframe width="560" height="315" src="https://www.youtube.com/embed/ybqsxM4mN-0" frameborder="0" allowfullscreen></iframe>
+		</div>
+		<div class="animation">
+ 			<iframe width="560" height="315" src="https://www.youtube.com/embed/f07yc9n5kXE" frameborder="0" allowfullscreen></iframe>
+		</div>
+		<div class="animation">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/AGMui2QGcjQ" frameborder="0" allowfullscreen></iframe>
+		</div>
+		<div class="animation">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/NnXD8ptykRc" frameborder="0" allowfullscreen></iframe>
+		</div>
+		<div class="animation">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/Ps_qmFaHZvA" frameborder="0" allowfullscreen></iframe>
+		</div>
+	</article>
 </main>
 <footer>
 	<p>website designed by Kevin Runyan &copy; 2017</p>
