--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
      	 		<a href="gallery.html#design" class="hide-mobile">Graphic Design</a>
 				<a href="gallery.html#digital" class="hide-mobile">Digital Art</a>
 				<a href="gallery.html#photography" class="hide-mobile">Photography</a>
+				<a href="gallery.html#video" class="hide-mobile">Animation and Video</a>
     	</div></li> | 
 		<li><a href="contact.html">Contact</a></li>
 </nav>
