--- a/gallery.html
+++ b/gallery.html
@@ -21,6 +21,7 @@
      	 		<a href="#design" class="hide-mobile">Graphic Design</a>
 				<a href="#digital" class="hide-mobile">Digital Art</a>
 				<a href="#photography" class="hide-mobile">Photography</a>
+				<a href="gallery.html#video" class="hide-mobile">Animation and Video</a>
     	</div></li> |  
 	<li><a href="contact.html">Contact</a></li>
 </nav>
