--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 		</div>
 
 	</article>
+	<article class="blog">
+		<iframe src="https://thegeeked1.blogspot.com/" width="94%" height="500"></iframe>
+	</article>
 </main>
 <footer>
 	<p>website designed by Kevin Runyan &copy; 2017</p>
