--- a/gallery.html
+++ b/gallery.html
@@ -141,8 +141,12 @@
 	 	  	<div class="desc">Landscape photography of plants on my back porch. Taken with a Canon Powershot SX110IS for Digital Photography at Parkland College.</div>
 		</div>
 		<div class="gallery">
- 			<a href="#structure" class="thumbnail"><img src="images/tn/Still_Life_Photography_Architecture.jpg" alt="Beagle" width="250" height="250"></a>
+ 			<a href="#structure" class="thumbnail"><img src="images/tn/Still_Life_Photography_Architecture.jpg" alt="Parkland College Doorway" width="250" height="250"></a>
 		  	<div class="desc">Archtitecture photo of an entrance at Parkland College. Taken with a Canon Powershot SX110IS for Digital Photography at Parkland College.</div>
+		</div>
+		<div class="gallery">
+ 			<a href="#firehydrant" class="thumbnail"><img src="images/tn/firehydrant.jpg" alt="Firehyrdant in front of setting sun" width="250" height="250"></a>
+		  	<div class="desc">A Firehydrant with slight overgrowth in front of a setting sun. Taken with a LG V20 smartphone using the manual settings.</div>
 		</div>
 	</article>
 	
@@ -198,5 +202,6 @@
 <a href="#_" class="lightbox" id="structure"><img src="images/lg/Still_Life_Photography_Architecture.jpg"></a>
 <a href="#_" class="lightbox" id="bottles"><img src="images/lg/bottles.jpg"></a>
 <a href="#_" class="lightbox" id="cans"><img src="images/lg/crab.jpg"></a>
+<a href="#_" class="lightbox" id="firehydrant"><img src="images/lg/firehydrant.jpg"></a>
 </body>
 </html>
