Mobile layouts for index and gallery pages. Firehydrant picture.

--- a/gallery.html
+++ b/gallery.html
@@ -16,13 +16,14 @@
 	<li class="dropdown">
 			<a href="javascript:void(0)" class="dropbtn hide-mobile" onClick="window.open('gallery.html', '_self');">Gallery</a>
     		<div class="dropdown-content">
-				<a href="#3D" class="hide-mobile">3D Models</a>
-     			<a href="#drawing" class="hide-mobile">Drawings</a>
-     	 		<a href="#design" class="hide-mobile">Graphic Design</a>
-				<a href="#digital" class="hide-mobile">Digital Art</a>
-				<a href="#photography" class="hide-mobile">Photography</a>
+				<a href="gallery.html#3D" class="hide-mobile">3D Models</a>
+     			<a href="gallery.html#drawing" class="hide-mobile">Drawings</a>
+     	 		<a href="gallery.html#design" class="hide-mobile">Graphic Design</a>
+				<a href="gallery.html#digital" class="hide-mobile">Digital Art</a>
+				<a href="gallery.html#photography" class="hide-mobile">Photography</a>
 				<a href="gallery.html#video" class="hide-mobile">Animation and Video</a>
-    	</div></li> |  
+    	</div></li>
+  <li class="hide-full"><a href="gallery.html">Gallery</a></li>|  
 	<li><a href="contact.html">Contact</a></li>
 </nav>
 
@@ -31,7 +32,7 @@
 	<article class="category" id="3D">
 		<h1 id="model" class="subheading">3D Models</h1>
 		
-		<div class="gallery" property="gallery" mv-multiple>
+		<div class="gallery">
  			 <a href="#pintGlass" class="thumbnail"><img src="images/tn/PintGlass.jpg" alt="Pint Glass" width="250" height="250"></a>
 		  <div class="desc">Realistic 3D glass model made in Maya for 3D Animation IV at Parkland College.</div>
 		</div>
@@ -141,8 +142,12 @@
 	 	  	<div class="desc">Landscape photography of plants on my back porch. Taken with a Canon Powershot SX110IS for Digital Photography at Parkland College.</div>
 		</div>
 		<div class="gallery">
- 			<a href="#structure" class="thumbnail"><img src="images/tn/Still_Life_Photography_Architecture.jpg" alt="Beagle" width="250" height="250"></a>
+ 			<a href="#structure" class="thumbnail"><img src="images/tn/Still_Life_Photography_Architecture.jpg" alt="Parkland College Doorway" width="250" height="250"></a>
 		  	<div class="desc">Archtitecture photo of an entrance at Parkland College. Taken with a Canon Powershot SX110IS for Digital Photography at Parkland College.</div>
+		</div>
+		<div class="gallery">
+ 			<a href="#firehydrant" class="thumbnail"><img src="images/tn/firehydrant.jpg" alt="Firehyrdant in front of setting sun" width="250" height="250"></a>
+		  	<div class="desc">A Firehydrant with slight overgrowth in front of a setting sun. Taken with a LG V20 smartphone using the manual settings.</div>
 		</div>
 	</article>
 	
@@ -198,5 +203,6 @@
 <a href="#_" class="lightbox" id="structure"><img src="images/lg/Still_Life_Photography_Architecture.jpg"></a>
 <a href="#_" class="lightbox" id="bottles"><img src="images/lg/bottles.jpg"></a>
 <a href="#_" class="lightbox" id="cans"><img src="images/lg/crab.jpg"></a>
+<a href="#_" class="lightbox" id="firehydrant"><img src="images/lg/firehydrant.jpg"></a>
 </body>
 </html>
