--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 				<a href="gallery.html#digital" class="hide-mobile">Digital Art</a>
 				<a href="gallery.html#photography" class="hide-mobile">Photography</a>
 				<a href="gallery.html#video" class="hide-mobile">Animation and Video</a>
-    	</div></li> | 
+    	</div></li>
+  <li class="hide-full"><a href="gallery.html">Gallery</a></li>|
 		<li><a href="contact.html">Contact</a></li>
 </nav>
 <main>
@@ -41,30 +42,35 @@
 	<article class="work">
 		<h1 class="subheading">Selected Works</h1>
 		<p>For more works, please see the <a href="gallery.html">Gallery</a></p>
-		<div class="gallery" property="gallery" mv-multiple>
- 			<a href="#pintGlass" class="thumbnail"><img src="images/tn/PintGlass.jpg" alt="Pint Glass" width="250" height="250"></a>
-		  	<div class="desc">Realistic 3D glass model made in Maya for 3D Animation IV at Parkland College.</div>
+		<div class="responsive">
+			<div class="gallery">
+ 				<a href="#pintGlass" class="thumbnail"><img src="images/tn/PintGlass.jpg" alt="Pint Glass" ></a>
+		  		<div class="desc">Realistic 3D glass model made in Maya for 3D Animation IV at Parkland College.</div>
+			</div>
+		</div>
+		<div class="responsive">
+			<div class="gallery">
+ 				<a href="#firehydrant" class="thumbnail" ><img src="images/tn/firehydrant.jpg" alt="Firehydrant in front of setting sun."></a>
+  				<div class="desc">A Firehydrant with slight overgrowth in front of a setting sun. Taken with a LG V20 smartphone using the manual settings.</div>
+			</div>
 		</div>
 		<div class="gallery">
- 			<a href="#charcoalContour" class="thumbnail" ><img src="images/tn/charcoalContour.jpg" alt="Charcoal Contour" width="250" height="250"></a>
-  			<div class="desc">Charcoal contour still life for Intro to Drawing I at Southern Illinois University Carbondale.</div>
-		</div>
-		<div class="gallery">
- 			<a href="#setExtension" class="thumbnail"><img src="images/tn/setExtension.jpg" alt="Set Extension" width="250" height="250"></a>
+ 			<a href="#setExtension" class="thumbnail"><img src="images/tn/setExtension.jpg" alt="Set Extension"></a>
  		 	<div class="desc">Matte picture of a future Chicago skyline. Made in Photoshop for 3D Animation IV for a set extension project.</div>
 		</div>
 		<div class="gallery">
-				<a href="#app" class="thumbnail"><img src="images/tn/App.jpg" alt="Android app made in Java" width="250" height="250"></a>
+				<a href="#app" class="thumbnail"><img src="images/tn/App.jpg" alt="Android app made in Java"></a>
 				<div class="desc">Android app for d20 based tabletop role playing games. Serves as a calculator and die roller for those games. Made for Mobile Application Development at Parkland College using Java and XML.</div>
 		</div>
 
 	</article>
+
 	<article class="blog">
-		<iframe src="https://thegeeked1.blogspot.com/" width="94%" height="500"></iframe>
+		<iframe src="https://thegeeked1.blogspot.com/" width="94%" height="500" frameborder="0"></iframe>
 	</article>
 </main>
 <footer>
-	<p>website designed by Kevin Runyan &copy; 2017</p>
+  <p>website designed by Kevin Runyan &copy; 2017</p>
 	<div id="footsocial">
 	<!--social media links here-->
 		<a href="https://www.linkedin.com/in/kevinrunyan/" target="_blank"><img src="images/social/linkedin.png" width="20" height="20" /></a>
@@ -74,7 +80,7 @@
 	</div>
 </footer>
 <a href="#_" class="lightbox" id="pintGlass"><img src="images/lg/PintGlass.jpg"></a>
-<a href="#_" class="lightbox" id="charcoalContour"><img src="images/lg/charcoalContour.jpg"></a>
+<a href="#_" class="lightbox" id="firehyrdrant"><img src="images/lg/firehydrant.jpg"></a>
 <a href="#_" class="lightbox" id="setExtension"><img src="images/lg/setExtension.jpg"></a>
 <a href="#_" class="lightbox" id="app"><img src="images/lg/App.jpg"></a>
 
