fixed firehydrant link

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	</div>
 </footer>
 <a href="#_" class="lightbox" id="pintGlass"><img src="images/lg/PintGlass.jpg"></a>
-<a href="#_" class="lightbox" id="firehyrdrant"><img src="images/lg/firehydrant.jpg"></a>
+<a href="#_" class="lightbox" id="firehydrant"><img src="images/lg/firehydrant.jpg"></a>
 <a href="#_" class="lightbox" id="setExtension"><img src="images/lg/setExtension.jpg"></a>
 <a href="#_" class="lightbox" id="app"><img src="images/lg/App.jpg"></a>
 
